# harmonia

./: .gitignore  .woodpecker.yml  Cargo.toml  README.md  cli.py
crates/harmonia/: Cargo.toml
docs/: architecture.md  engine-artifact-ratchet.md  hermes-agent-maintenance.md
installer/: README.md  __init__.py  harmonia_installer.py
locks/homeconsole/: pinned-artifacts.json
payloads/tv/: README.md  index.json
profiles/: README.md
profiles/homeconsole/: index.json
profiles/homeserver/: README.md  index.json
profiles/rebis/: index.json
profiles/tv/: index.json
src/: arcadia.rs  arcadia_gui_runtime.rs  capsule.rs  convergence_lock.rs  deployable_config.rs  device_profile.rs  homeconsole.rs  homeconsole_sync_runtime.rs  keyman.rs  keyman_runtime.rs  ladder.rs  lib.rs  main.rs  module_dispatch.rs  pinned_artifacts.rs  pinned_artifacts_runtime.rs  preflight.rs  profile_engine.rs  receipts.rs  subscription.rs  sync.rs  tools.rs
src/modules/: homeconsole_sync_runtime.rs  mod.rs
src/profiles/: homeconsole.rs  mod.rs
src/tools/: archive.rs  artifact_lock.rs  aur.rs  command.rs  files.rs  git_artifact.rs  health.rs  machine_id.rs  migration.rs  module_steps.rs  node_build.rs  package.rs  receipt.rs  service_runtime.rs  systemd.rs  validated_file_symlink.rs  (+1 more)
tests/: README.md  test_caduceus_access_server.py  test_hermes_agent_maintenance_tool.py  test_household_capability.py  test_installer_cli.py  test_matrix_converge_script.py  test_rebis_waybar_config.py  test_sacred_credential.py  test_shell_python_heredocs.py  test_tv_desktop_config.py
tools/: README.md
(+370 files in other folders)
