[package]
name = "harmonia"
version = "0.1.0"
edition = "2021"
description = "Rust update manager and appliance-profile execution engine"
license = "AGPL-3.0-or-later"
repository = "https://git.home.arpa/HOMESERVERSLTD/harmonia"

[workspace]
members = ["."]
resolver = "2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
